--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -15,13 +15,13 @@
         }
     ],
     "require": {
-        "composer/installers": "^1.9",
-        "drupal/admin_toolbar": "^2.3",
-        "drupal/core-composer-scaffold": "^9",
-        "drupal/core-project-message": "^9",
-        "drupal/core-recommended": "^9",
-        "drupal/restui": "^1.18",
-        "drush/drush": "^10.3"
+        "composer/installers": "^2.2.0",
+        "drupal/admin_toolbar": "^3.4.2",
+        "drupal/core-composer-scaffold": "^10",
+        "drupal/core-project-message": "^10",
+        "drupal/core-recommended": "^10",
+        "drupal/restui": "^1.21",
+        "drush/drush": "^12"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -29,7 +29,12 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/installers": true,
+            "drupal/core-composer-scaffold": true,
+            "drupal/core-project-message": true
+        }
     },
     "extra": {
         "drupal-scaffold": {
